--- a/tests/integration/targets/vmware_object_custom_attributes_info/tasks/pre.yml
+++ b/tests/integration/targets/vmware_object_custom_attributes_info/tasks/pre.yml
@@ -29,3 +29,30 @@
       - name: esxi_example02
         value: test2
     state: present
+
+- name: Gather virtual machine information
+  community.vmware.vmware_guest_info:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    datacenter: "{{ dc1 }}"
+    name: "{{ virtual_machines.0.name }}"
+  register: vm_info
+
+- name: Gather ESXi host information
+  community.vmware.vmware_host_facts:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    validate_certs: false
+    esxi_hostname: "{{ esxi1 }}"
+    schema: vsphere
+    properties:
+      - _moId
+  register: esxi_info
+
+- name: Set vm_moid and esxi_moid variable
+  set_fact:
+    vm_moid: "{{ vm_info.instance.moid }}"
+    esxi_moid: "{{ esxi_info.ansible_facts.moid }}"
