--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -379,6 +379,85 @@ releases:
       name: vmware_host_tcpip_stacks
       namespace: ''
     release_date: '2021-05-05'
+  1.11.0:
+    changes:
+      bugfixes:
+      - vmware - fix that the return value should be returned None if moId doesn't
+        exist of a virtual machine (https://github.com/ansible-collections/community.vmware/pull/867).
+      - vmware_vmotion - implement new parameter named destination_datacenter to fix
+        failure to move storage when datastores are shared across datacenters (https://github.com/ansible-collections/community.vmware/issues/858)
+      major_changes:
+      - vmware_object_custom_attributes_info - added a new module to gather custom
+        attributes of an object (https://github.com/ansible-collections/community.vmware/pull/851).
+      minor_changes:
+      - vmware - added a new method to search Managed Object based on moid and object
+        type (https://github.com/ansible-collections/community.vmware/pull/879).
+      - vmware_dvswitch - Dynamically check the DVS versions vCenter supports (https://github.com/ansible-collections/community.vmware/issues/839).
+      - vmware_dvswitch - Implement network_policy parameter with suboptions promiscuous,
+        forged_transmits and mac_changes (https://github.com/ansible-collections/community.vmware/issues/833).
+      - vmware_guest - Make the requirements for Virtualization Based Security explicit
+        (https://github.com/ansible-collections/community.vmware/pull/816).
+      - vmware_guest - New parameter ``secure_boot`` to manage (U)EFI secure boot
+        on VMs (https://github.com/ansible-collections/community.vmware/pull/816).
+      - vmware_guest - New parameter ``vvtd`` to manage Intel Virtualization Technology
+        for Directed I/O on VMs (https://github.com/ansible-collections/community.vmware/pull/816).
+      - vmware_guest_controller - added bus_sharing property to scsi controllers (https://github.com/ansible-collections/community.vmware/pull/878).
+      - vmware_guest_instant_clone - added the the guestinfo_vars parameter to provide
+        GuestOS Customization functionality in instant cloned VM (https://github.com/ansible-collections/community.vmware/pull/796).
+      - vmware_host_custom_attributes - new module (https://github.com/ansible-collections/community.vmware/pull/838).
+      - vmware_host_inventory - added ability for username to be a vault encrypted
+        variable, and updated documentation to reflect ability for username and password
+        to be vaulted. (https://github.com/ansible-collections/community.vmware/issues/854).
+      - vmware_host_passthrough - added a new module to enable or disable passthrough
+        of PCI devices with ESXi host has (https://github.com/ansible-collections/community.vmware/pull/872).
+      - vmware_host_tcpip_stacks - added ipv6_gateway parameter and nsx_overlay as
+        an alias of vxlan (https://github.com/ansible-collections/community.vmware/pull/834).
+      - vmware_host_vmnic_info - add LLDP information to output when applicable (https://github.com/ansible-collections/community.vmware/pull/828).
+      - vmware_object_custom_attributes_info - added a new parameter to support moid
+        (https://github.com/ansible-collections/community.vmware/pull/879).
+      - vmware_vcenter_settings.py - Add advanced_settings parameter (https://github.com/ansible-collections/community.vmware/pull/819).
+      - vmware_vm_inventory - added ability for username to be a vault encrypted variable,
+        and updated documentation to reflect ability for username and password to
+        be vaulted. (https://github.com/ansible-collections/community.vmware/issues/854).
+    fragments:
+    - 796-vmware_guest_instant_clone.yml
+    - 816-vmware_guest.yml
+    - 819-vmware_vcenter_settings-advanced_setting.yml
+    - 828_vmware_host_vmnic_info.yml
+    - 833-vmware_dvswitch-network_policy.yml
+    - 834-vmware_host_tcpip_stacks.yml
+    - 838_vmware_host_custom_attributes.yml
+    - 851-vmware_object_custom_attributes_info.yml
+    - 855_vmware_host_inventory.yml
+    - 855_vmware_vm_inventory.yml
+    - 858_vmware_vmotion_add_destination_datacenter_parameter.yml
+    - 867-vmware.yml
+    - 872-vmware_host_passthrough.yml
+    - 878_vmware_guest_controller.yml
+    - 879-vmware_object_custom_attributes_info.yml
+    modules:
+    - description: Manage custom attributes from VMware for the given ESXi host
+      name: vmware_host_custom_attributes
+      namespace: ''
+    - description: Manage PCI device passthrough settings on host
+      name: vmware_host_passthrough
+      namespace: ''
+    - description: Gather custom attributes of an object
+      name: vmware_object_custom_attributes_info
+      namespace: ''
+    - description: Gather information about object's permissions
+      name: vmware_object_role_permission_info
+      namespace: ''
+    - description: Returns the recommended datastore from a SDRS-enabled datastore
+        cluster
+      name: vmware_recommended_datastore
+      namespace: ''
+    plugins:
+      inventory:
+      - description: VMware ESXi hostsystem inventory source
+        name: vmware_host_inventory
+        namespace: null
+    release_date: '2021-06-11'
   1.2.0:
     changes:
       bugfixes:
