--- a/changelogs/fragments/817-vmware_vm_inventory-support-proxy.yml
+++ b/changelogs/fragments/817-vmware_vm_inventory-support-proxy.yml
@@ -1,2 +1,3 @@
 minor_changes:
-  - vmware_vm_inventory - support api access via proxy (https://github.com/ansible-collections/community.vmware/pull/790).
+  - vmware_vm_inventory - support api access via proxy (https://github.com/ansible-collections/community.vmware/pull/817).
+  - vmware_host_inventory - support api access via proxy (https://github.com/ansible-collections/community.vmware/pull/817).
