fix an issue that vm_hba doesn't find during testing CI

--- a/tests/integration/targets/vmware_host_iscsi/tasks/main.yml
+++ b/tests/integration/targets/vmware_host_iscsi/tasks/main.yml
@@ -30,25 +30,18 @@
         that:
           - prepare_iscsi_disabled_result.changed is sameas true
 
-- name: Gather facts for host bus adapters
-  vmware_host_facts:
+- name: Gather iSCSI info
+  community.vmware.vmware_host_iscsi_info:
     hostname: "{{ vcenter_hostname }}"
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
     validate_certs: false
     esxi_hostname: "{{ esxi1 }}"
-    schema: vsphere
-    properties:
-      - config.storageDevice.hostBusAdapter
-  register: gather_facts_host_bus_adapters_result
+  register: gather_iscsi_info
 
 - name: set iSCSI hba name to vmhba_name variable
   set_fact:
-    vmhba_name: "{{ item.device }}"
-  loop: "{{ gather_facts_host_bus_adapters_result.ansible_facts.config.storageDevice.hostBusAdapter }}"
-  when:
-    - "'device' in item"
-    - "'isSoftwareBased' in item and item.isSoftwareBased is sameas true"
+    vmhba_name: "{{ gather_iscsi_info.iscsi_properties.vmhba_name }}"
 
 - name: vmware_host_iscsi module test - connect to vCenter
   include_tasks: iscsi_module_test_tasks.yml
