--- a/tests/integration/targets/vmware_host_ntp/tasks/main.yml
+++ b/tests/integration/targets/vmware_host_ntp/tasks/main.yml
@@ -49,19 +49,6 @@
       register: absent_one
     - debug: var=absent_one
 
-    - name: Remove NTP server from a host
-      vmware_host_ntp:
-        hostname: "{{ vcenter_hostname }}"
-        username: "{{ vcenter_username }}"
-        password: "{{ vcenter_password }}"
-        esxi_hostname: '{{ esxi1 }}'
-        state: present
-        ntp_servers:
-          - 1.pool.ntp.org
-        validate_certs: false
-      register: present
-    - debug: var=present
-
     - name: Add more NTP servers to a host
       vmware_host_ntp:
         hostname: "{{ vcenter_hostname }}"
@@ -72,7 +59,7 @@
         ntp_servers:
           - 2.pool.ntp.org
           - 3.pool.ntp.org
-          - 4.pool.ntp.org
+          - example1.com
         validate_certs: false
       register: present
     - debug: var=present
@@ -86,11 +73,9 @@
         state: absent
         ntp_servers:
           - 0.pool.ntp.org
-          - 1.pool.ntp.org
           - 2.pool.ntp.org
           - 3.pool.ntp.org
-          - 4.pool.ntp.org
-          - 6.pool.ntp.org
+          - example1.com
         validate_certs: false
       register: absent_all
     - debug: var=absent_all
@@ -117,8 +102,8 @@
         esxi_hostname: '{{ esxi1 }}'
         ntp_servers:
           - 3.pool.ntp.org
-          - 4.pool.ntp.org
-          - 5.pool.ntp.org
+          - example1.com
+          - example2.com
         verbose: true
         validate_certs: false
       register: ntp_servers
