--- a/tests/integration/targets/vmware_object_custom_attributes_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_object_custom_attributes_info/tasks/main.yml
@@ -6,6 +6,7 @@
     name: prepare_vmware_tests
   vars:
     setup_attach_host: true
+    setup_datastore: true 
     setup_virtualmachines: true
 
 - name: Include tasks pre.yml
