inventory: install dependencies for running tests
Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/tests/integration/targets/inventory_vmware_host_inventory/playbook/install_dependencies.yml
+++ b/tests/integration/targets/inventory_vmware_host_inventory/playbook/install_dependencies.yml
@@ -1,7 +1,11 @@
 ---
 - name: Install dependencies
   hosts: localhost
-  gather_facts: false
   tasks:
     - pip:
         name: toml
+
+    - name: Install the Python bindings for SELinux
+      yum:
+        name: libselinux-python
+        state: present
