2nd attempt to fix and re-enable integration tests

--- a/tests/integration/targets/vmware_tag_manager/tasks/cleanup.yml
+++ b/tests/integration/targets/vmware_tag_manager/tasks/cleanup.yml
@@ -1,16 +1,3 @@
-- name: Get Tags
-  community.vmware.vmware_tag_info:
-    hostname: '{{ vcenter_hostname }}'
-    username: '{{ vcenter_username }}'
-    password: '{{ vcenter_password }}'
-    validate_certs: false
-  
-- set_fact:
-    tag_category_id: "{{ item.tag_category_id }}"
-  loop: "{{ tag_results.tag_info|community.general.json_query(query) }}"
-  vars:
-    query: "[?tag_name==`{{ tag_one }}`]"
-
 - name: Delete Tags
   vmware_tag:
     hostname: '{{ vcenter_hostname }}'
@@ -18,9 +5,8 @@
     password: '{{ vcenter_password }}'
     validate_certs: false
     tag_name: "{{ tag_one }}"
-    category_id: "{{ tag_category_id }}"
+    category_id: "{{ cat_one_id }}"
     state: absent
-  when: tag_category_id is defined
   register: delete_tag
 
 - name: Delete Categories
