--- a/.gitignore
+++ b/.gitignore
@@ -388,3 +388,4 @@ $RECYCLE.BIN/
 changelogs/.plugin-cache.yaml
 
 # End of https://www.gitignore.io/api/git,linux,pydev,python,windows,pycharm+all,jupyternotebook,vim,webstorm,emacs,dotenv
+tests/integration/cloud-config-vcenter.ini
