--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -498,6 +498,49 @@ releases:
     - 874-vmware_object_role_permission_info-principal_permissions.yml
     - 904-vmware_guest_instant_clone.yml
     release_date: '2021-07-07'
+  1.13.0:
+    changes:
+      bugfixes:
+      - vmware - changed to use from isinstance to type in the if condition of option_diff
+        method (https://github.com/ansible-collections/community.vmware/pull/983).
+      - vmware_guest - add message for `deploy_vm` method when it fails with timeout
+        error while customizing the VM (https://github.com/ansible-collections/community.vmware/pull/933).
+      - vmware_guest_instant_clone - fixed an issue that the module should be required
+        the guestinfo_vars parameter when executing (https://github.com/ansible-collections/community.vmware/pull/962).
+      - vmware_guest_powerstate - added the datacenter parameter to fix an issue that
+        datacenter key error has been occurring (https://github.com/ansible-collections/community.vmware/pull/924).
+      - vmware_host_datastore - fixed an issue that the right error message isn't
+        displayed (https://github.com/ansible-collections/community.vmware/pull/976).
+      minor_changes:
+      - vm_device_helper - Add new functions for create, remove or reconfigure virutal
+        NVDIMM device (https://github.com/ansible-collections/community.vmware/issues/853).
+      - vmware - the scenario guides from Ansible repo migrated to collection repo.
+      - vmware_guest - Add new parameter 'nvdimm' for add, remove or reconfigure virutal
+        NVDIMM device of virtual machine (https://github.com/ansible-collections/community.vmware/issues/853).
+      - vmware_guest_disk - add the capability to create and remove RDM disks from
+        Virtual Machines.
+      - vmware_guest_snapshot_info - add quiesced status in VM snapshot info (https://github.com/ansible-collections/community.vmware/pull/978)
+      - vmware_host_datastore - added a new parameter to expand a datastore capacity
+        (https://github.com/ansible-collections/community.vmware/pull/915).
+      - vmware_host_inventory - filter hosts before templating hostnames (https://github.com/ansible-collections/community.vmware/issues/850).
+      - vmware_portgroup - Disable traffic shaping without defining ``traffic_shaping.average_bandwidth``,
+        ``traffic_shaping.burst_size`` and ``traffic_shaping.peak_bandwidth`` (https://github.com/ansible-collections/community.vmware/issues/955).
+      - vmware_spbm - Add a new function 'find_storage_profile_by_name' (https://github.com/ansible-collections/community.vmware/issues/853).
+      - vmware_vm_inventory - filter guests before templating hostnames (https://github.com/ansible-collections/community.vmware/issues/850).
+    fragments:
+    - 449-vmware_guest_disk_rdm.yml
+    - 850_vmware_inventory.yml
+    - 853-vmware_guest.yml
+    - 915-vmware_host_datastore.yml
+    - 924-vmware_guest_powerstate.yml
+    - 933-vmware_guest_add_msg_customization_failed.yml
+    - 955-vmware_portgroup.yml
+    - 962-vmware_guest_instant_clone.yml
+    - 976-vmware_host_datastore.yml
+    - 978-vmware_guest_snapshot_info.yml
+    - 983-vmware.yml
+    - migrate_vmware_scenario_guides.yml
+    release_date: '2021-08-16'
   1.2.0:
     changes:
       bugfixes:
