--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -310,3 +310,7 @@ plugin_routing:
       deprecation:
         removal_date: 2021-12-01
         warning_text: see plugin documentation for details
+    vmware_guest_vnc:
+      deprecation:
+        removal_date: 2022-10-15
+        warning_text: see plugin documentation for details
