Improve tools/ naming

--- a/tools/update_documentation.yml
+++ b/tools/update_documentation.yml
@@ -1,4 +1,4 @@
 - hosts: localhost
   tasks:
     - name: Update documentation
-      import_tasks: create_documentation.yml
+      import_tasks: create_documentation_tasks.yml
