--- a/tools/prepare_release.yml
+++ b/tools/prepare_release.yml
@@ -15,7 +15,7 @@
       ansible.builtin.shell: git checkout -b "prepare_{{ version }}_release"
 
     - name: Update documentation
-      import_tasks: create_documentation.yml
+      import_tasks: create_documentation_tasks.yml
 
     - name: Refresh the changelog
       ansible.builtin.shell: 'tox -e antsibull-changelog -- release --verbose --version {{ version }}'
