--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -618,6 +618,34 @@ releases:
       name: vmware_guest_tpm
       namespace: ''
     release_date: '2021-11-05'
+  1.17.0:
+    changes:
+      bugfixes:
+      - vmware_guest - when ``customization.password`` is not defined, the Administrator
+        password is made empty instead of setting it to string 'None' (https://github.com/ansible-collections/community.vmware/issues/1017).
+      minor_changes:
+      - vmware_datastore_info - added show_tag parameters to allow datastore tags
+        to be read in a uniform way across _info modules  (https://github.com/ansible-collections/community.vmware/pull/1085).
+      - vmware_guest_disk - Added a new key 'cluster_disk' which allows you to use
+        a filename originating from a VM with an RDM.
+      - vmware_guest_disk - Added bus_sharing as an option for SCSI devices.
+      - vmware_guest_disk - Enabled the use of up to 64 disks on a paravirtual SCSI
+        controller when the hardware is version 14 or higher.
+      - vmware_guest_sendkey - added additional USB scan codes for HOME and END.
+      - vmware_host_scanhba - add rescan_vmfs parameter to allow rescaning for new
+        VMFS volumes. Also add rescan_hba parameter with default true to allow for
+        not rescaning HBAs as this might be very slow. (https://github.com/ansible-collections/community.vmware/issues/479)
+      - vmware_host_snmp - implement setting syscontact and syslocation (https://github.com/ansible-collections/community.vmware/issues/1044).
+      - vmware_rest_client module_util - added function get_tags_for_datastore for
+        convenient tag collection (https://github.com/ansible-collections/community.vmware/pull/1085).
+    fragments:
+    - 1013-vmware_rdm_updates.yml
+    - 1017-vmware_guest-fix_administrator_password.yml
+    - 1044_add_syscontact_syslocation_vmware_host_snmp.yml
+    - 1085_add_show_tag_to_vmware_datastore_info.yml
+    - 1117_add_additional_usb_scan_codes.yml
+    - rescan_VMFS_feature.yml
+    release_date: '2021-12-06'
   1.2.0:
     changes:
       bugfixes:
