Revert "vmware_dvs_portgroup: Remove portgroup_type (#1150)"
This reverts commit 4e1234cb13cf4972a61036e27f317f2563fb9894.

--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_dvs_portgroup.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_dvs_portgroup.yml
@@ -5,8 +5,7 @@
     portgroup_name: '{{ dvpg1 }}'
     vlan_id: 0
     num_ports: 32
-    port_binding: 'static'
-    port_allocation: 'fixed'
+    portgroup_type: earlyBinding
     state: present
 
 - name: Create the DVS PG with slash in name
@@ -15,6 +14,5 @@
     switch_name: '{{ dvswitch1 }}'
     vlan_id: 0
     num_ports: 120
-    port_binding: 'static'
-    port_allocation: 'fixed'
+    portgroup_type: earlyBinding
     state: present
