--- a/tests/integration/targets/vmware_guest/tasks/network_with_portgroup.yml
+++ b/tests/integration/targets/vmware_guest/tasks/network_with_portgroup.yml
@@ -12,8 +12,7 @@
     switch_name: "{{ dvswitch1 }}"
     vlan_id: "1"
     num_ports: 2
-    port_binding: 'static'
-    port_allocation: 'fixed'
+    portgroup_type: earlyBinding
     state: present
   register: dvsportgroup
 - debug: var=dvsportgroup
