--- a/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
@@ -320,7 +320,7 @@
     that:
         - dvs_pg_result_0009.changed
 
-- name: Change portgroup to ephemeral
+- name: Change portgroup_type to ephemeral
   vmware_dvs_portgroup:
     validate_certs: false
     hostname: "{{ vcenter_hostname }}"
