--- a/tests/integration/targets/vmware_dvs_portgroup_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup_info/tasks/main.yml
@@ -50,8 +50,7 @@
             portgroup_name: 'dvportgroup\/%'
             vlan_id: 1
             num_ports: 8
-            port_binding: 'static'
-            port_allocation: 'fixed'
+            portgroup_type: earlyBinding
             state: present
           register: create_dvportgroup_with_special_characters_result
 
@@ -82,8 +81,7 @@
             portgroup_name: 'dvportgroup\/%'
             vlan_id: 1
             num_ports: 8
-            port_binding: 'static'
-            port_allocation: 'fixed'
+            portgroup_type: earlyBinding
             state: absent
           register: delete_dvportgroup_with_special_characters_result
 
