--- a/tests/integration/targets/vmware_migrate_vmk/tasks/main.yml
+++ b/tests/integration/targets/vmware_migrate_vmk/tasks/main.yml
@@ -129,8 +129,7 @@
         validate_certs: false
         switch_name: "{{ dvswitch1 }}"
         portgroup_name: "{{ dvswitch_pg_name_for_test }}"
-        port_binding: 'static'
-        port_allocation: 'fixed'
+        portgroup_type: earlyBinding
         num_ports: 8
         vlan_id: 0
         state: present
