--- a/tests/integration/targets/vmware_dvs_host/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_host/tasks/main.yml
@@ -46,6 +46,17 @@
       that:
         - host_dvs_attachment_again is not changed
 
+  - name: Gather facts about the vmnics
+    community.vmware.vmware_host_vmnic_info:
+      hostname: '{{ esxi1 }}'
+      username: '{{ esxi_user }}'
+      password: '{{ esxi_password }}'
+      validate_certs: false
+      esxi_hostname: '{{ esxi1 }}'
+    register: my_vmnic
+
+  - debug: var=my_vmnic
+
   - name: 'Add vmnic to uplink'
     vmware_dvs_host:
       esxi_hostname: '{{ esxi1 }}'
