Re-add vcsim to .github/BOTMETA.yml

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -10,6 +10,7 @@ files:
     - esx
     - vcenter
     - vcsa
+    - vcsim
     - vsphere
     labels:
     - cloud
@@ -23,6 +24,7 @@ files:
     - esx
     - vcenter
     - vcsa
+    - vcsim
     - vsphere
     labels:
     - cloud
