move check-ignores-order in tools/
Depends-On: https://github.com/ansible/ansible-zuul-jobs/pull/1525

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
 commands =
   flake8 plugins {posargs}
   antsibull-changelog lint
-  ./check-ignores-order
+  {toxinidir}/tools/check-ignores-order
   yamllint -c .yamllint.yaml tests
 
 [testenv:add_docs]
